Fix horizontal shift.

--- a/app.css
+++ b/app.css
@@ -3,6 +3,9 @@ body {
   font-weight: bold;
   color: #333333;
   text-align: center;
+  width: 100%;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 @media (min-width: 769px) {
